--- a/playbook.yml
+++ b/playbook.yml
@@ -1,15 +1,35 @@
 ---
-# Setup drivers and Docker for a GPU instance
+# Setup Nvidia drivers for containerd on a GPU instance
 - hosts: gpu
   become: true
+  vars:
+    nvidia_docker_repo_gpg_url: "{{ nvidia_docker_repo_base_url }}/gpgkey"
+    nvidia_docker_repo_base_url: "https://nvidia.github.io/nvidia-docker"
+    ubuntu_repo_file_name: "nvidia-docker.list"
+    ubuntu_repo_file_path: "/etc/apt/sources.list.d/{{ ubuntu_repo_file_name }}"
   tasks:
     - name: Install Nvidia drivers
       include_role:
           name: nvidia_driver
 
-    - name: Install Nvidia Docker
-      include_role:
-          name: nvidia_docker
+    - name: Add Nvidia repo gpg key
+      apt_key:
+        url: "{{ nvidia_docker_repo_gpg_url }}"
+        state: present
+
+    - name: Add Nvidia apt repo
+      get_url:
+        url: "{{ nvidia_docker_repo_base_url }}/ubuntu20.04/{{ ubuntu_repo_file_name }}"
+        dest: "{{ ubuntu_repo_file_path }}"
+        mode: 0644
+
+    - name: Install Nvidia container runtime and toolkit
+      apt:
+        name:
+          - nvidia-container-runtime
+          - nvidia-container-toolkit
+        state: present
+        update_cache: yes
 
     - name: Make sure containerd config folder exists
       file:
